refactor(render): 优化预览渲染性能和代码质量
- 移除 PointsElement 中不必要的 immediate 判空检查
- 修复 PortPositionCalculator 中变量初始化方式
- 使用 getFirst() 替换 get(0) 提升预览管理器性能
- 统一代码风格和变量声明方式